add main image, comment non-needed

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -442,7 +442,7 @@ a.back-to-top{
 
 // Page Banner Area
 #page-banner-area{
-  background: url(../img/background/banner.jpg) no-repeat;
+  // background: url(../img/background/banner.jpg) no-repeat;
   background-position: 50% 50%;
   background-size: cover;
 }
