--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -106,6 +106,7 @@
   color: $preset!important;
 }
 .navbar{
+  background: #222222;
   padding: 0;
    li.active a.nav-link {
       color: $preset!important;
