--- a/assets/scss/colors/_presets.scss
+++ b/assets/scss/colors/_presets.scss
@@ -1,7 +1,7 @@
 //All Preset color variables are here
 
  // blue
- $blue: #E91E63;
+ $blue: #e535ab;
  
 //Current Preset Declareation
  $preset:  $blue;
