--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -56,7 +56,7 @@
   background: transparent;
 }
 .navbar-expand-lg .navbar-nav .nav-link{
-  color: #fff;
+  color: #000;
   padding: 0 15px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -106,10 +106,13 @@
   color: $preset!important;
 }
 .navbar{
-  background: #222222;
+  // box-shadow: 3px 4px 7px 0px #f8f8f8;
+  border-bottom: 1px solid #888;
+  background: #FFF;
   padding: 0;
    li.active a.nav-link {
       color: $preset!important;
+      font-weight: bold;
   }
 }
 .dropdown-toggle::after{
