--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@ body {
   background: #fff;
   font-size: 15px;
   font-weight: 400;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -19,10 +19,13 @@ body {
   overflow-x: hidden;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-size: 36px;
   font-weight: 700;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 a {
@@ -42,18 +45,20 @@ a a:focus {
 
 p {
   font-weight: 400;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   margin: 0px;
   font-size: 14px;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: outside none none;
   margin: 0;
   padding: 0;
 }
 
-ul li, ol li {
+ul li,
+ol li {
   list-style: none;
 }
 
@@ -108,7 +113,7 @@ ul li, ol li {
 
 .section-title:before {
   position: absolute;
-  content: '';
+  content: "";
   left: 15px;
   bottom: 8px;
   width: 48px;
@@ -118,7 +123,7 @@ ul li, ol li {
 
 .section-title:after {
   position: absolute;
-  content: '';
+  content: "";
   left: 0px;
   bottom: 2px;
   width: 48px;
@@ -126,7 +131,8 @@ ul li, ol li {
   background-color: #e535ab;
 }
 
-.section-title:before, .section-title:after {
+.section-title:before,
+.section-title:after {
   left: 50%;
   margin-left: -45px;
 }
@@ -154,7 +160,7 @@ ul li, ol li {
 
 .section-sub:before {
   position: absolute;
-  content: '';
+  content: "";
   height: 1px;
   width: 45px;
   left: 50%;
@@ -223,11 +229,11 @@ ul li, ol li {
 
 .btn-common:hover {
   color: #fff;
-  background: #F50057;
+  background: #bd2d8d;
   box-shadow: 0 6px 22px rgba(0, 0, 0, 0.1);
-  transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
 }
 
 .btn-border {
@@ -256,7 +262,8 @@ button:focus {
   outline: none !important;
 }
 
-.icon-close, .icon-check {
+.icon-close,
+.icon-check {
   color: #e535ab;
 }
 
@@ -302,7 +309,8 @@ a.back-to-top i {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
 
-a.back-to-top:hover, a.back-to-top:focus {
+a.back-to-top:hover,
+a.back-to-top:focus {
   text-decoration: none;
 }
 
@@ -333,7 +341,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .sk-circle .sk-child:before {
-  content: '';
+  content: "";
   display: block;
   margin: 0 auto;
   width: 15%;
@@ -466,7 +474,9 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 @-webkit-keyframes sk-circleBounceDelay {
-  0%, 80%, 100% {
+  0%,
+  80%,
+  100% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
@@ -477,7 +487,9 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 @keyframes sk-circleBounceDelay {
-  0%, 80%, 100% {
+  0%,
+  80%,
+  100% {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
@@ -516,7 +528,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .page-banner:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -651,7 +663,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .navbar-expand-lg .navbar-nav li > a:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 50%;
@@ -784,7 +796,8 @@ a.back-to-top:hover, a.back-to-top:focus {
   color: #e535ab;
 }
 
-.dropdown-item.active, .dropdown-item:active {
+.dropdown-item.active,
+.dropdown-item:active {
   background: transparent;
 }
 
@@ -842,7 +855,8 @@ a.back-to-top:hover, a.back-to-top:focus {
     background: #e535ab;
     color: #fff;
   }
-  .slicknav_nav a:hover, .slicknav_nav .active {
+  .slicknav_nav a:hover,
+  .slicknav_nav .active {
     color: #e535ab;
     background: #f5f5f5;
   }
@@ -1005,7 +1019,8 @@ a.back-to-top:hover, a.back-to-top:focus {
   padding: 20px 20px;
 }
 
-.schedule .schedule-tab-title .nav-tabs .nav-item.show .nav-link, .schedule .schedule-tab-title .nav-tabs .nav-link.active,
+.schedule .schedule-tab-title .nav-tabs .nav-item.show .nav-link,
+.schedule .schedule-tab-title .nav-tabs .nav-link.active,
 .schedule .schedule-tab-title .nav-tabs .nav-item .nav-link:hover {
   background: #e535ab;
   border: 1px solid #e535ab;
@@ -1015,12 +1030,14 @@ a.back-to-top:hover, a.back-to-top:focus {
   -o-transition: all 0.3s ease-in-out 0s;
 }
 
-.schedule .schedule-tab-title .nav-tabs .nav-item.show .nav-link h4, .schedule .schedule-tab-title .nav-tabs .nav-link.active h4,
+.schedule .schedule-tab-title .nav-tabs .nav-item.show .nav-link h4,
+.schedule .schedule-tab-title .nav-tabs .nav-link.active h4,
 .schedule .schedule-tab-title .nav-tabs .nav-item .nav-link:hover h4 {
   color: #fff;
 }
 
-.schedule .schedule-tab-title .nav-tabs .nav-item.show .nav-link h5, .schedule .schedule-tab-title .nav-tabs .nav-link.active h5,
+.schedule .schedule-tab-title .nav-tabs .nav-item.show .nav-link h5,
+.schedule .schedule-tab-title .nav-tabs .nav-link.active h5,
 .schedule .schedule-tab-title .nav-tabs .nav-item .nav-link:hover h5 {
   color: #fff;
 }
@@ -1372,7 +1389,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .team-item .overlay-social-icon .social-icons li a:hover .fa-facebook {
-  background: #3B5998;
+  background: #3b5998;
 }
 
 .team-item .overlay-social-icon .social-icons li a:hover .fa-twitter {
@@ -1552,9 +1569,9 @@ a.back-to-top:hover, a.back-to-top:focus {
   background: #2d2d2d;
   color: #fff;
   border-radius: 4px;
-  -webkit-transition: .3s all;
-  -o-transition: .3s all;
-  transition: .3s all;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
+  transition: 0.3s all;
 }
 
 .contact-item .contact-info h3 {
@@ -1774,7 +1791,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .footer-area .footer-social li .facebook:hover {
-  background: #3B5998;
+  background: #3b5998;
 }
 
 .footer-area .footer-social li .twitter:hover {
@@ -2063,7 +2080,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 #pricing .price-block-wrapper .pricing-list {
-  padding: 10px  60px 10px 78px;
+  padding: 10px 60px 10px 78px;
   text-align: left;
 }
 
