--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -44,3 +44,11 @@
     font-size: 3rem;
   }
 }
+#coc {
+  img {
+    display: block;
+    @media (max-width: 1199px) {
+      margin-bottom: 3em !important;
+    }
+  }
+}
