--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -42,6 +42,12 @@
   color: white;
   @media (max-width: 1199px) {
     font-size: 3rem;
+    margin-bottom: 40px;
+  }
+}
+.title-date {
+  @media (max-width: 991px) {
+    font-size: 1.5rem !important;
   }
 }
 #coc {
